--- a/webkirill/style.css
+++ b/webkirill/style.css
@@ -44,3 +44,703 @@ p {
 
     overflow: hidden;
 }
+
+/* Header
+=========================== */
+.header {
+
+    width: 100%;
+    padding-top: 30px;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+}
+
+.header.fixed {
+
+    padding: 10px 0;
+
+    background-color: #ec908f;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, .3);
+
+    position: fixed;
+    top: 0;
+    right: 0;  
+    left: 0;
+
+    transform: translate3d(0, 0, 0);
+}
+
+.header.active {
+
+    background-color: #ec908f;
+}
+
+.header__inner {
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header__logo {
+
+    font-size: 30px;
+    font-weight: 700;
+    color: #fff;
+}
+
+
+/* Nav
+=========================== */
+
+.nav {
+
+    text-transform: uppercase;
+    font-size: 14px;
+}
+
+.nav.active {
+
+    display: block;
+}
+
+.nav__link {
+
+    display: inline-block;
+    vertical-align: top;
+    margin: 0 20px;
+    position: relative;
+
+    color: #fff;
+    text-decoration: none;
+
+    transition: color .2s linear ;
+}
+
+.nav__link:last-child {
+
+    margin-right: 0;
+}
+
+.nav__link:hover {
+
+    color: #fce38a;
+}
+
+.nav__link:after {
+
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px;
+    
+    background-color: #fce38a;
+    opacity: 0;
+
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1;
+
+    transition: opacity .2s linear;
+}
+
+.nav__link:hover:after {
+
+    opacity: 1;
+}
+
+/* nav-toggle
+================================= */
+
+.nav-toggle {
+
+    width: 30px;
+    padding: 10px 0;
+    display: none;
+
+    font-size: 0;
+    color: transparent;
+
+    border: 0;
+    background: none;
+    cursor: pointer;
+
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    z-index: 1;
+}
+
+.nav-toggle:focus {
+
+    outline: 0;
+}
+
+.nav-toggle__item {
+
+    display: block;
+    width: 100%;
+    height: 3px;
+
+    background-color: #fff;
+
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+
+    transition: background .2s linear;
+
+}
+
+.nav-toggle.active .nav-toggle__item {
+
+    background: none;
+}
+
+.nav-toggle.active .nav-toggle__item::after {
+
+    transform-origin: left bottom;
+    transform: rotate(45deg) translate3d(0, -3px, 0);
+}
+
+.nav-toggle.active .nav-toggle__item::before {
+
+    transform-origin: left top;
+    transform: rotate(-45deg) translate3d(0, 3px, 0);
+}
+
+
+.nav-toggle__item::before,
+.nav-toggle__item::after {
+
+    content: "";
+    width: 100%;
+    height: 3px;
+
+    position: absolute;
+    left: 0;
+    z-index: 1;
+
+    background-color: #fff;
+    transition: transform .2s linear;
+}
+
+.nav-toggle__item::before {
+
+    top: 8px;
+}
+
+.nav-toggle__item::after {
+
+    bottom: 8px;
+}
+
+/* Intro
+=========================== */
+
+.intro {
+
+    width: 100%;
+    height: 100vh;
+    min-height: 820px;
+    background-color: #333333;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;  
+}
+
+.intro__inner {
+
+    width: 100%;
+    max-width: 880px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.intro__suptitle {
+
+    margin-bottom: 20px;
+    font-family: 'Kaushan Script', cursive;
+    font-size: 62px;
+    color: #fff;
+    
+}
+
+
+.intro__title {
+
+    font-size: 120px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #fff;
+    line-height: 1;
+}
+
+
+/* Section
+=========================== */
+
+.section {
+
+    padding: 80px 0;  
+}
+
+.section--me {
+
+    background-color: #ffffff;
+}
+
+.section__header {
+
+    text-align: center;
+    width: 100%;
+    max-width: 950px;
+    margin: 0 auto 80px;
+}
+
+.section__subtitle {
+
+    font-family: 'Kaushan Script', cursive;
+    color: #333333;
+    font-size: 24px;
+    font-weight: 400;
+}
+
+.section__title {
+
+    text-transform: uppercase;
+
+    font-weight: 700;
+    font-size: 30px;
+    color: #333333;
+}
+
+
+.section__title:after {
+
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background-color: #f38181;
+    margin: 30px auto 60px;
+}
+
+
+.section__txt {
+
+    color: #999999;
+    font-size: 15px;
+}
+
+
+/* pictures
+=========================== */
+
+.pictures {
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 80px -15px 0;
+}
+
+
+.pictures__item {
+
+    padding: 0 15px;
+}
+
+
+.picture__inner {
+
+    position: relative;
+    background-color: #95e1d3;
+}
+
+
+.pictures__item:hover .pictures__img {
+
+    transform: translate3d(-10px,-10px,0);
+}
+
+.pictures__item:hover .pictures__img img {
+    
+    opacity: .1;
+}
+
+.pictures__item:hover .pictures__text {
+
+    opacity: 1;
+}
+
+.pictures__img {
+
+    background: linear-gradient(to bottom, #f38181, #fce38a);
+
+    transition: transform .2s linear;
+
+    
+}
+
+.pictures__img img {
+
+    display: block;
+    max-width: 100%;
+    height: auto;
+    transition: opacity .2s linear;
+    /* height: 150px;
+    width: 250px; */
+}
+
+.pictures__text {
+
+    width: 100%;
+
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 18px;
+    text-align: center;
+    opacity: 0;
+
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 2;
+    transform: translate3d(0,-50%,0);
+
+    transition: opacity .2s linear;
+}
+
+.picture__info {
+
+    margin-top: 20px;
+
+    text-align: center;
+}
+
+.picture__name {
+
+    margin-bottom: 5px;
+    font-size: 14px;
+    color: #333333;
+    text-transform: uppercase;
+}
+
+.picture__prof {
+
+    font-size: 15px;
+    font-style: italic;
+    font-weight: 300;
+
+    color: #999999;
+}
+
+
+
+/* Social
+================================== */
+
+.social {
+
+    display: flex;
+    justify-content: center;
+}
+
+
+.social__item {
+
+    width: 55px;
+    height: 55px;
+
+    padding: 13px 10px;
+    background-color: #fce38a;
+    border-right: 1px solid #f38181;
+
+    font-size: 30px;
+    text-decoration: none;
+    color: #f38181;
+    line-height: 1;
+
+    transition: background .2s linear, color .2s linear;
+}
+
+
+
+.social__item:last-child {
+
+    border-right: 0;
+}
+
+.social__item:hover {
+
+    background-color: #f38181;
+    color: #fff;
+}
+
+
+
+@media (max-width: 1230px) {
+
+    /* Intro
+    =============================== */
+
+    .intro__suptitle {
+
+        font-size: 52px;
+    }
+
+    .intro__title {
+
+        font-size: 110px;
+    }
+
+}
+
+
+@media (max-width: 990px) {
+
+
+    /* Intro
+  =============================== */
+
+  .intro__suptitle {
+
+      font-size: 32px;
+  }
+
+  .intro__title {
+
+      font-size: 82px;
+  }
+
+  /* Services */
+
+  .services__item {
+   
+      width: 50%;
+      padding-bottom: 0;
+  }
+
+  .services__item--border{
+
+      border-bottom: 0;
+  }
+
+  /* Pictures */
+
+  .pictures__item {
+
+    margin-bottom: 10px;
+  }
+
+  .pictures__item:last-child {
+
+    margin-bottom: 0;
+  }
+}
+
+
+
+@media (max-width: 770px) {
+
+
+    /* Intro */
+
+    .intro {
+
+        min-height: 650px;
+    }
+
+
+    /* Header */
+
+    .header {
+
+        padding: 10px 0;
+    }
+
+
+    /* Nav
+    ============================ */
+
+    .nav {
+
+        display: none;
+        width: 100%;
+
+        position: absolute;
+
+        top: 100%;
+        left: 0;
+
+        background-color: #ec908f;
+    } 
+
+    .nav__link {
+
+        display: block;
+        margin: 0;
+        padding: 8px 10px;
+    }
+    
+    .nav-toggle {
+
+        display: block;
+    }
+
+    /* Section
+    ============================ */
+
+    .section {
+
+        padding: 40px 0;
+    }
+
+    .section--devices {
+        
+        padding-bottom: 0;
+    }
+
+    .section__subtitle {
+
+        font-size: 20px;
+    }
+
+    .section__title {
+
+        font-size: 28px;
+    }
+
+    /* Slider
+    ============================ */
+
+    .slider__txt {
+
+        display: none;
+    }
+
+    /* Pictures
+    =================== */
+
+    .pictures {
+
+        margin-top: 50px;
+        justify-content: center;
+    }
+
+    .pictures__item {
+
+        width: 100%;
+        max-width: 410px;
+        margin-bottom: 20px;
+    }
+
+    .pictures__item:last-child {
+
+        margin-bottom: 0;
+    }
+
+    /* Services */
+
+    .services__item {
+     
+        width: 100%;
+    }
+
+    /* Wedo */
+
+    .wedo__img {
+
+        display: none;
+    }
+
+    .wedo__item {
+
+        width: 100%;
+    }
+
+    .pictures__item:last-child {
+
+        margin-bottom: 40px; ;
+    }
+
+    /* Reviews */
+
+    .reviews__photo {
+
+        position: static;
+        margin: 0 auto 20px;
+    }
+
+    .reviews__item {
+
+        padding-left: 0;
+    }
+
+    .reviews__txt {
+
+        font-size: 16px;
+    }
+
+    .reviews__author {
+
+        font-size: 20px;
+    }
+
+    /* Works */
+
+    .works {
+
+        flex-wrap: wrap;
+    }
+
+    .works__col {
+
+        flex: none;
+        width: 50%;
+    }
+
+    /* Blogs */
+
+
+    .blog {
+
+        max-width: 380px;
+        margin: 0 auto;
+    }
+
+    .blog__item {
+
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    .blog__item :last-child {
+
+        margin-bottom: 0;
+    }
+
+
+    /* Footer */
+
+
+    .footer__col--second,
+    .footer__col--third {
+
+        width: 100%;
+    }
+
+    
+}
