--- a/webkirill/style.css
+++ b/webkirill/style.css
@@ -63,7 +63,7 @@ p {
 
     padding: 10px 0;
 
-    background-color: #ec908f;
+    background-color: #333;
     box-shadow: 0 3px 10px rgba(0, 0, 0, .3);
 
     position: fixed;
@@ -76,7 +76,7 @@ p {
 
 .header.active {
 
-    background-color: #ec908f;
+    background-color: #333;
 }
 
 .header__inner {
@@ -91,6 +91,7 @@ p {
     font-size: 30px;
     font-weight: 700;
     color: #fff;
+    cursor: pointer;
 }
 
 
@@ -572,7 +573,8 @@ p {
     }
 
 
-    /* Nav
+
+   /* Nav
     ============================ */
 
     .nav {
@@ -585,7 +587,7 @@ p {
         top: 100%;
         left: 0;
 
-        background-color: #ec908f;
+        background-color: #333;
     } 
 
     .nav__link {
@@ -599,7 +601,7 @@ p {
 
         display: block;
     }
-
+    
     /* Section
     ============================ */
 
@@ -743,4 +745,45 @@ p {
     }
 
     
+}
+
+@media (max-width: 575px) {
+
+
+    /* Intro
+  =============================== */
+
+
+  .intro__suptitle {
+
+      font-size: 20px;
+  }
+
+  .intro__title {
+
+      font-size: 52px;
+  }
+
+  /* Section
+  ============================ */
+
+  .section__header {
+
+      margin-bottom: 50px;
+  }
+
+  .section__subtitle {
+
+      font-size: 18px;
+  }
+
+  .section__title {
+
+      font-size: 24px;
+  }
+
+  .section__title:after {
+
+      margin: 20px auto;
+  }
 }
