--- a/prechy/style.css
+++ b/prechy/style.css
@@ -117,6 +117,7 @@ p {
     justify-content: center;
     padding-top: 100px;
     height: 580px;
+    width: 100%;
 
     background: url(img/bg.jpg)
     center no-repeat;
@@ -134,6 +135,11 @@ p {
 
 .intro__img {
 
+    min-width: 100%;
+    top: 50%;
+    right: 30%;
+    z-index: 1;
+
     position: absolute;
     top: -100px;
 }
@@ -141,8 +147,9 @@ p {
 .intro__txt {
 
     position: absolute;
-    top: 0;
-    right: 100px;
+    top: 50%;
+    left: 40%;
+    z-index: 1;
 }
 
 .intro__title {
@@ -159,7 +166,6 @@ p {
     font-weight: 400;
     color: #fff;
     margin-bottom: 20px;
-    right: 150px;
 }
 
 
