--- a/prechy/style.css
+++ b/prechy/style.css
@@ -328,19 +328,21 @@ hr {
 
     display: none;
 
-    padding: 9px 2px;
-    background: none;
+    padding: 15px 5px;
+    background:#5094f2;
+    border-radius: 10px;
     border: 0;
     cursor: pointer;
 }
 
 .burger__item {
+
     display: block;
 
     width: 30px;
     height: 3px;
 
-    background-color: #000;
+    background-color: #fff;
     font-size: 0;
     color: transparent;
 
@@ -354,11 +356,12 @@ hr {
 
     width: 100%;
     height: 100%;
-    background-color: #000;
+    background-color: #fff;
 
     position: absolute;
     left: 0;
     z-index: 1;
+    
 }
 
 .burger__item::before {
@@ -374,18 +377,8 @@ hr {
 
 @media (max-width:900px) {
 
-    .cart__item {
-
-        width: 100%;
-        text-align: center;
-    }
-}
-
-
-@media (max-width:820px) {
-
-
      /* Nav */
+
      .nav {
 
         display: none;
@@ -393,14 +386,38 @@ hr {
         flex-direction: column;
         text-align: right;
 
-        background-color: #ebbb11;
+        background-color: #fff;
 
         position: absolute;
         top: 100%;
         right: 0;
-
-
     }
+
+    .nav__link {
+
+        padding-right: 10px;
+    }
+    
+    .nav.show {
+
+        display: flex;
+    }
+
+    .cart__item {
+
+        width: 100%;
+        text-align: center;
+    }
+
+    .burger {
+
+        display: block;
+    }
+}
+
+
+@media (max-width:820px) {
+
 
     /* Intro */
 
