--- a/betchan/style.css
+++ b/betchan/style.css
@@ -72,6 +72,9 @@ table {
 		height: 100px;
 
 		background-color: #0d0d0d;
+
+		position: fixed;
+		z-index: 20;
 	}
 
 	
@@ -89,16 +92,18 @@ table {
 	}
 
 
-	.header__logo img {
+	.header__logo i {
 
 		max-width: 100%;
+		font-size: 50px;
+		color: rgb(134, 184, 124);
 
 		opacity: .7;
 		transition: opacity .2s linear;
 	}
 
 
-	.header__logo img:hover {
+	.header__logo i:hover {
 
 		opacity: 1;
 	}
@@ -119,6 +124,7 @@ table {
 
 	.header__bonuses i {
 
+		font-size: 18px;
 		color: #eba505;
 	}
 
@@ -190,14 +196,14 @@ table {
 
 	.btn--red {
 
-		background-color: #e84545;
+		background-color: rgb(134, 184, 124);
 		border: 0;
-		padding: 15px 55px;		
+		padding: 15px 35px;		
 	}
 	
 			
 	.btn--red:hover {
-		background-color: #b13131;
+		background-color: rgb(108, 146, 100);
 	}
 	
 	
@@ -231,17 +237,18 @@ table {
 		font-size: 90px;
 		font-weight: 700;
 		text-transform: uppercase;
-		text-shadow: 2px 2px 2px #0d0d0d;
+		text-shadow: 3px 3px 2px #0d0d0d;
 
 		cursor: pointer;
 		opacity: .7;
-		transition: opacity .2s linear;
+		transition: opacity .2s linear, transform .2s linear;
 	}
 
 
 	.intro__title:hover {
 
 		opacity: 1;
+		transform: translate3d(-2px,-2px,0);
 	}
 
 	.intro__item .btn--red {
@@ -286,7 +293,6 @@ table {
 	.intro__markers {
 
 		margin-top: 40px;
-		margin-left: 20px;
 		font-size: 19px;
 		font-weight: 300;	
 	}
@@ -298,6 +304,7 @@ table {
 		font-weight: 400;
 		max-width: 700px;
 		margin: 100px auto 0;
+		text-shadow: 2px 2px 2px #0d0d0d;
 
 		opacity: .7;
 		transition: opacity .2s linear;
@@ -386,12 +393,14 @@ table {
 		right: 100px;
 
 		opacity: .7;
-		transition: opacity .2s linear;
+		transition: opacity .2s linear, transform .2s linear;
 	}
+
 
 	.section__item img:hover {
 
 		opacity: 1;
+		transform: translate3d(-3px,-3px,0);
 	}
 
 
@@ -404,6 +413,7 @@ table {
 
 		background-color: #0c0c0c;
 		padding-top: 50px;
+		padding-bottom: 10px;
 	}
 
 	.questions__txt {
@@ -425,7 +435,6 @@ table {
 		border: 2px solid #404040;
 
 		opacity: .7;
-		transition: opacity .2s linear;
 	}
 
 	.accordion__item:hover {
@@ -435,6 +444,7 @@ table {
 
 	.accordion__item.active 
 	.accordion__content {
+
 		display: block;
 	}
 
@@ -498,6 +508,7 @@ table {
 		font-size: 15px;
 		color: #fff;
 		font-weight: 400;
+		transition: all .3s linear;
 	}
 
 
@@ -522,6 +533,15 @@ table {
 		font-weight: 500;
 		color: #fff;
 		padding-bottom: 20px;
+
+		opacity: .7;
+		transition: opacity .2s linear;
+		cursor: pointer;
+	}
+
+	.footer__title:hover {
+
+		opacity: 1;
 	}
 
 
@@ -536,10 +556,233 @@ table {
 
 		font-size: 30px;
 		color: #fff;
-		transition: color .2s linear;
+		transition: color .2s linear, transform .2s linear;
 	}
 
 	.footer__icon i:hover {
 
 		color: #eba505;
+		transform: translate3d(-2px,-2px,0);
+	}
+
+
+	/* Burger
+	===================================== */
+
+	.header__burger {
+
+		display: none;
+	}
+
+
+
+
+	@media (max-width:1025px){
+
+		/* Intro */
+
+		.intro__title{
+
+			font-size: 80px;
+
+			padding-top: 40px;
+		}
+
+		/* Section */
+
+		.section__item img {
+
+			right: 0;
+		}
+	}
+
+
+	@media (max-width:766px) {
+
+
+		/* Header */
+
+		.header__burger {
+
+			display: block;
+			position: relative;
+			width: 30px;
+			height: 20px;
+			margin-right: 25px;
+		}
+
+		.header__burger span {
+
+			background-color: #fff;
+			position: absolute;
+			width: 100%;
+			height: 2px;
+			top: 9px;
+
+			transition: all .3s ease 0s;
+		}
+
+
+		.header__burger:before,
+		.header__burger:after {
+
+			content: "";
+			background-color: #fff;
+			position: absolute;
+			width: 100%;
+			height: 2px;
+			left: 0;
+			z-index: 21;
+
+			transition: all .3s ease 0s;
+		}
+
+		.header__burger:before {
+
+			top: 0;
+		}
+
+		.header__burger:after {
+
+			bottom: 0;
+		}
+
+		.header__burger.active span {
+
+			transform: scale(0);
+		}
+
+		.header__burger.active:before {
+
+			transform: rotate(45deg);
+			top: 9px;
+		}
+
+		.header__burger.active:after {
+
+			transform: rotate(-45deg);
+			bottom: 9px;
+		}
+
+
+		.header__items {
+
+			display: block;
+			text-align: center;
+
+			background-color: #0d0d0d;
+			border-radius: 5px;
+
+			position: fixed;
+			top: -100%;
+			right: 0;
+			padding: 100px 10px 0 0;
+			z-index: 10;
+
+			transition: all .3s linear;
+		}
+
+		.header__items.active {
+
+			top: 0;
+		}
+
+		.header__item {
+
+			padding-top: 10px;
+		}
+
+		.header__item:last-child {
+
+			padding-bottom: 10px;
+		}
+
+
+		/* Intro */
+
+
+		.intro__title {
+
+			font-size: 60px;
+		}
+
+
+		/* Section */
+
+		.section__item--second {
+
+			display: none;
+		}
+
+		.section__inner {
+
+			justify-content: center;
+			text-align: center;
+		}
+
+	}
+
+
+
+	@media (max-width:486px) {
+
+		/* Intro */
+
+		.intro__title {
+
+			font-size: 40px;
+		}
+
+		.intro__txt {
+
+			font-size: 12px;
+		}
+
+		/* Section */
+
+		.section__title {
+
+			font-size: 30px;
+		}
+
+		.section__txt {
+
+			font-size: 14px;
+		}
+		
+	}
+
+	@media (max-width:400px) {
+
+		.btn {
+
+			font-size: 14px;
+			padding: 8px 15px;
+		}
+
+		/* Intro */
+
+
+		.intro__title {
+
+			margin-top: 150px;
+		}
+
+		.intro__txt {
+
+			margin-top: 20px;
+		}
+
+
+		/* Question */
+
+		.questions__txt {
+
+			font-size: 30px;
+		}
+
+		.accordion__title {
+
+			font-size: 16px;
+		}
 	}
