--- a/betchan/style.css
+++ b/betchan/style.css
@@ -216,7 +216,9 @@ table {
 		display: flex;
         flex-direction: column;
         justify-content: center;
+		align-items: center;
 		height: 100vh;
+		width: 100%;
 		
 		background:url(img/intro/background.jpg) 50%/ cover no-repeat ;
 		background-attachment: fixed;	
@@ -305,6 +307,8 @@ table {
 		max-width: 700px;
 		margin: 100px auto 0;
 		text-shadow: 2px 2px 2px #0d0d0d;
+
+		padding: 0 8px;
 
 		opacity: .7;
 		transition: opacity .2s linear;
@@ -576,6 +580,23 @@ table {
 
 
 
+	@media (max-width:1281px) {
+
+		/* Intro */
+
+		.intro__title {
+
+			font-size: 80px;
+			margin-top: 40px;
+		}
+
+		.intro__txt {
+
+			margin-top: 50px;
+		}
+	}
+
+
 
 	@media (max-width:1025px){
 
@@ -583,10 +604,25 @@ table {
 
 		.intro__title{
 
-			font-size: 80px;
-
-			padding-top: 40px;
+			font-size: 60px;
+			padding-top: 70px;
 		}
+
+		.intro__txt {
+
+			margin-top: 40px;
+		}
+
+		.intro__item a {
+
+			margin-top: 20px;
+		}
+
+		.intro__markers {
+
+			margin-top: 30px;
+		}
+
 
 		/* Section */
 
@@ -723,6 +759,17 @@ table {
 	}
 
 
+	@media (max-width:600px) {
+
+		/* Intro */
+
+		.intro__title {
+
+			font-size: 50px;
+		}
+	}
+
+
 
 	@media (max-width:486px) {
 
@@ -762,14 +809,20 @@ table {
 
 		/* Intro */
 
-
+/* 
 		.intro__title {
 
 			margin-top: 150px;
-		}
+		} */
 
 		.intro__txt {
 
+			margin-top: 20px;
+		}
+
+		.intro__markers {
+
+			font-size: 14px;
 			margin-top: 20px;
 		}
 
@@ -785,4 +838,16 @@ table {
 
 			font-size: 16px;
 		}
+	}
+
+
+	@media (max-width:350px) {
+
+		.intro__title {
+
+			margin-top: 0;
+			font-size: 25px;
+		}
+
+
 	}
