--- a/betchan/style.css
+++ b/betchan/style.css
@@ -218,9 +218,12 @@ table {
         justify-content: center;
 		align-items: center;
 		height: 100vh;
+		width: 100%;
 		
-		background:url(img/intro/background.jpg) 50%/ cover no-repeat ;	
+		background:url(img/intro/background.jpg) 50%/ cover no-repeat fixed;	
+		background-size: cover;
 		}
+
 
 
 
