--- a/handbook/style.css
+++ b/handbook/style.css
@@ -163,8 +163,10 @@ table {
 
    .intro__pdf {
 
-        height: 700px;
+        height: 650px;
         width: 450px;
+
+        margin: 10px 0;
    }
 
  
