--- a/handbook/style.css
+++ b/handbook/style.css
@@ -199,18 +199,24 @@ table {
     font-size: 16px;
     font-weight: 500;
     text-transform: uppercase;
+    align-items: center;
+    text-align: center;
 }
 
 .nav__link {
-    margin-left: 10px;
+    margin-left: 15px;
     color: #fff;
     text-decoration: none;
+    /* border: 2px #fff solid;
+    border-radius: 5px;
+    padding: 3px 5px; */
     opacity: .75;
-    transition: opacity .2s linear;
+    transition: transform .2s linear, opacity .2s linear;
 }
 
 .nav__link:hover {
     opacity: 1;
+    transform: translate3d(-2px, -2px, 0);
 }
 
 
