--- a/Alina_List/style.css
+++ b/Alina_List/style.css
@@ -111,6 +111,13 @@ img {
 	width: 190px;
 	height: 190px;
 	border-radius: 5px;	
+	transition: .5s;
+}
+
+img:hover{
+
+	width: 195px;
+	height: 195px;
 }
 
 .markets {
