--- a/school/style.css
+++ b/school/style.css
@@ -24,6 +24,7 @@ footer, header, hgroup, menu, nav, section {
 }
 html {
     height: 100%;
+    scroll-behavior: smooth;
 }
 body {
     line-height: 1;
@@ -38,6 +39,9 @@ blockquote:before, blockquote:after,
 q:before, q:after {
     content: '';
     content: none;
+}
+scroll-container {
+  scroll-behavior: smooth;
 }
 
 a{
