--- a/school/style.css
+++ b/school/style.css
@@ -90,36 +90,77 @@ p{
   width: 100%;
   height: 140px;
   position: fixed;
+  align-items: c;
   background-color: #fff;
   z-index: 10;
 }
 
+.header.active {
+
+  background-color: #fff;
+}
+
 .header__logo img{
+
+  position: absolute;
+  z-index: 1;
+  left: 40%;
+  top: 20%;
   width: 350px;
   cursor: pointer;
 }
 
 .header__inner{
-  display: flex;
-  justify-content: space-between;
   font-size: 25pt;
-  padding: 35px 0;
-  align-items: center;
+  padding: 55px 0;
+  margin-left: 80px;
+}
+
+.nav{
+
+  display: flex;
+}
+
+
+.nav__reg{
+  padding-left: 500px;
 }
 
 .nav__link{
   font-family: Felidae;
   color: #000;
-  margin-left: 80px;
+  margin-left: 50px;
   transition: .5s;
 }
 
 .nav__link:hover{
   color: #eb4c00;
 }
+.nav__link:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+  opacity: 0;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1;
+  transition: opacity .2s linear;
+}
 
 .nav__link:first-child{
   margin-left: 0;
+}
+
+.nav__link:hover:after {
+
+  opacity: 1;
+}
+
+.nav__div{
+  padding-left: 30px;
 }
 
 .nav__lang{
@@ -133,36 +174,35 @@ p{
 }
 
 
-.nav__second {
-  display: flex;
-}
-
-.nav__second div{
-  margin-left: 80px;
-  margin-right: 20px;
+img{
+  max-width: 100%;
 }
 
 .bg__img-1{
   padding-top: 50px;
   height: 100vh;
+  width: 100%;
   background: url(img/1.png) center no-repeat;
 }
 
 .bg__img-2{
   padding-top: 50px;
   height: 100vh;
+  width: 100%;
   background: url(img/2.png) center no-repeat;
 }
 
 .bg__img-3{
   padding-top: 50px;
   height: 100vh;
+  width: 100%;
   background: url(img/3.png) center no-repeat;
 }
 
 .bg__img-4{
   padding-top: 50px;
   height: 100vh;
+  width: 100%;
   background: url(img/4.png) center no-repeat;
 }
 
@@ -175,6 +215,11 @@ p{
   color: #000;
   font-size: 60pt;
   text-align: center;
+  padding-top: 140px;
+}
+
+.title__c{
+  padding-top: 0;
 }
 
 .section{
@@ -185,14 +230,20 @@ p{
 
 .section img{
   padding: 0 40px;
+  width: 100%;
 }
 
-.text__r{
-  margin-left: 170px;
+.text{
+  margin: 0 40px;
 }
 
 .text__l{
-  margin-right: 170px;
+  margin-right: 120px;
+  
+}
+
+.text__ll{
+  margin-left: -45px;
 }
 
 li .text__r{
@@ -240,4 +291,286 @@ li .text__l{
 
 .icon{
   width: 80px;
+}
+
+/* nav-toggle
+================================= */
+
+.nav-toggle {
+
+  width: 30px;
+  padding: 10px 0;
+  display: none;
+
+  font-size: 0;
+  color: transparent;
+
+  border: 0;
+  background: none;
+  cursor: pointer;
+
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  z-index: 1;
+}
+
+.nav-toggle:focus {
+
+  outline: 0;
+}
+
+.nav-toggle__item {
+
+  display: block;
+  width: 100%;
+  height: 3px;
+
+  background-color: #eb4c00;
+
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+
+  transition: background .2s linear;
+
+}
+
+.nav.active {
+
+  display: block;
+}
+
+.nav-toggle.active .nav-toggle__item {
+
+  background: none;
+}
+
+.nav-toggle.active .nav-toggle__item::after {
+
+  transform: rotate(45deg);
+top: 9px;
+}
+
+.nav-toggle.active .nav-toggle__item::before {
+
+  transform: rotate(-45deg);
+bottom: 9px;
+}
+
+
+.nav-toggle__item::before,
+.nav-toggle__item::after {
+
+  content: "";
+  width: 100%;
+  height: 3px;
+
+  position: absolute;
+  left: 0;
+  z-index: 1;
+
+  background-color: #eb4c00;
+  transition: transform .2s linear;
+}
+
+.nav-toggle__item::before {
+
+  top: 8px;
+}
+
+.nav-toggle__item::after {
+
+  bottom: 8px;
+}
+
+/* Media
+========================== */
+
+@media(max-width: 1640px){
+
+  .header__inner{
+    font-size: 24pt;
+  }
+
+  .nav__reg{
+    padding-left: 500px;
+  }
+  
+  .nav__link{
+    font-family: Felidae;
+    color: #000;
+    margin-left: 45px;
+    transition: .5s;
+  }
+
+  .header__logo img{
+    left: 38%;
+    top: 20%;
+    width: 320px;
+  }
+
+  .bg__img-1{
+    padding-top: 30px;
+  }
+
+  .title{
+    padding-top: 140px;
+  }
+}
+
+@media(max-width: 1600px){
+  
+  .header{
+    height: 120px;
+  }
+  .header__logo img{
+    width: 300px;
+  }
+
+  .header__inner{
+    display: flex;
+    justify-content: space-around;
+    font-size: 19pt;
+    padding: 50px 10px;
+    margin-left: 50px;
+    align-items: center;
+  }
+
+}
+
+@media(max-width: 1500px){
+
+  body{
+    font-size: 20pt;
+  }
+  .container{
+    max-width: 1500px;
+  }
+
+  .nav__reg{
+    padding-left: 450px;
+  }
+
+  .section img{
+    width: 35%;
+  }
+
+  .header__inner{
+    font-size: 19pt;
+    padding: 50px 10px;
+    justify-content: center;
+  }
+
+  .title{
+    font-size: 50pt;
+    padding-top: 120px;
+  }
+}
+
+
+@media(max-width: 1400px){
+
+  .header{
+    height: 100px;
+  }
+  .header__inner{
+    font-size: 17pt;
+    padding: 40px 10px;
+    justify-content: center;
+  }
+
+  .header__logo img{
+    left: 40%;
+    top: 20%;
+    width: 230px;
+  }
+
+  .title{
+    font-size: 40pt;
+  }
+
+  .nav__reg{
+    padding-left: 350px;
+  }
+
+  .bg__img-1{
+    padding-top: 30px;
+  }
+
+  .title{
+    padding-top: 120px;
+  }
+
+  .title__c{
+    margin-top: -150px;
+  }
+  .contacts{
+    padding-bottom: 150px;
+  }
+
+}
+
+@media(max-width:1200px){
+
+  .header{
+    height: 110px;
+  }
+
+  .header__inner{
+    font-size: 15pt;
+    padding: 40px 10px;
+    justify-content: center;
+  }
+
+  .nav__reg{
+    padding-left: 350px;
+  }
+
+  .title{
+    font-size: 34pt;
+  }
+}
+
+@media(max-width:1120px){
+
+  .nav{
+    width: 100%;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+    top: 100%;
+    right: 0;
+    padding: 10px;
+    background-color: #ec908f;
+    display: none;
+}
+
+.nav__link:hover{
+  color: #fff;
+}
+
+.nav__lang:hover{
+  color: #fff;
+}
+
+.nav__div{
+  padding-right: 10px;
+}
+
+
+.nav__link {
+  display: block;
+  margin: 0;
+  padding: 8px 10px;
+}
+
+.nav-toggle {
+  display: block;
+  top: 40%;
+}
 }
