--- a/school/style.css
+++ b/school/style.css
@@ -87,9 +87,8 @@ p{
 
 .header{
   width: 100%;
-  height: 140px;
+  height: 120px;
   position: fixed;
-  align-items: c;
   background-color: #fff;
   z-index: 10;
 }
@@ -103,7 +102,7 @@ p{
 
   position: absolute;
   z-index: 1;
-  left: 40%;
+  left: 38%;
   top: 20%;
   width: 350px;
   cursor: pointer;
@@ -111,7 +110,7 @@ p{
 
 .header__inner{
   font-size: 25pt;
-  padding: 55px 0;
+  padding: 50px 0;
   margin-left: 80px;
 }
 
@@ -122,7 +121,7 @@ p{
 
 
 .nav__reg{
-  padding-left: 500px;
+  padding-left: 490px;
 }
 
 .nav__link{
@@ -161,32 +160,9 @@ img{
   max-width: 100%;
 }
 
-.bg__img-1{
-  padding-top: 50px;
-  height: 100vh;
+.bg__img{
+  padding-top: 70px;
   width: 100%;
-  background: url(img/1.png) center no-repeat;
-}
-
-.bg__img-2{
-  padding-top: 50px;
-  height: 100vh;
-  width: 100%;
-  background: url(img/2.png) center no-repeat;
-}
-
-.bg__img-3{
-  padding-top: 50px;
-  height: 100vh;
-  width: 100%;
-  background: url(img/3.png) center no-repeat;
-}
-
-.bg__img-4{
-  padding-top: 50px;
-  height: 100vh;
-  width: 100%;
-  background: url(img/4.png) center no-repeat;
 }
 
 .about__us{
@@ -198,7 +174,7 @@ img{
   color: #000;
   font-size: 60pt;
   text-align: center;
-  padding-top: 140px;
+  padding-top: 120px;
 }
 
 .title__c{
@@ -388,8 +364,13 @@ li .text__l{
 
 @media(max-width: 1640px){
 
+  .header{
+    height: 120px;
+  }
+
   .header__inner{
     font-size: 24pt;
+    padding: 50px 10px;
   }
 
   .nav__reg{
@@ -404,24 +385,18 @@ li .text__l{
   }
 
   .header__logo img{
-    left: 38%;
     top: 20%;
     width: 320px;
   }
-
-  .bg__img-1{
-    padding-top: 30px;
-  }
-
   .title{
-    padding-top: 140px;
+    padding-top: 120px;
   }
 }
 
 @media(max-width: 1600px){
   
   .header{
-    height: 120px;
+    height: 110px;
   }
   .header__logo img{
     width: 300px;
@@ -430,10 +405,13 @@ li .text__l{
   .header__inner{
     display: flex;
     justify-content: space-around;
-    font-size: 19pt;
-    padding: 50px 10px;
+    font-size: 20pt;
     margin-left: 50px;
     align-items: center;
+  }
+
+  .title{
+    padding-top: 110px;
   }
 
 }
@@ -442,6 +420,9 @@ li .text__l{
 
   body{
     font-size: 20pt;
+  } 
+  .header{
+    height: 100px;
   }
 
   .nav__reg{
@@ -454,13 +435,12 @@ li .text__l{
 
   .header__inner{
     font-size: 19pt;
-    padding: 50px 10px;
-    justify-content: center;
+    padding: 45px 10px;
   }
 
   .title{
     font-size: 50pt;
-    padding-top: 120px;
+    padding-top: 100px;
   }
 }
 
@@ -468,11 +448,12 @@ li .text__l{
 @media(max-width: 1400px){
 
   .header{
-    height: 100px;
+    height: 80px;
   }
+  
   .header__inner{
     font-size: 17pt;
-    padding: 40px 10px;
+    padding: 35px 10px;
     justify-content: center;
   }
 
@@ -484,25 +465,11 @@ li .text__l{
 
   .title{
     font-size: 40pt;
+    padding-top: 80px;
   }
 
   .nav__reg{
     padding-left: 350px;
-  }
-
-  .bg__img-1{
-    padding-top: 0px;
-  }
-
-  .title{
-    padding-top: 120px;
-  }
-
-  .title__c{
-    margin-top: -150px;
-  }
-  .contacts{
-    padding-bottom: 150px;
   }
 
 }
@@ -513,9 +480,6 @@ li .text__l{
     font-size: 18pt;
   }
 
-  .header{
-    height: 100px;
-  }
 
   .header__inner{
     font-size: 15pt;
@@ -529,11 +493,8 @@ li .text__l{
 
   .title{
     font-size: 34pt;
-    padding-top: 100px;
   }
-  .title__c{
-    margin-top: -140px;
-  }
+
   .contacts{
     padding-bottom: 150px;
   }
@@ -570,7 +531,6 @@ li .text__l{
   padding-right: 10px;
 }
 
-
 .nav__link {
   display: block;
   margin: 0;
@@ -602,7 +562,7 @@ li .text__l{
   }
 
   .text__ll{
-    margin: 0 10px;
+    margin: 0 30px;
   }
 }
 
@@ -615,6 +575,10 @@ li .text__l{
   .title{
     font-size: 30pt;
     padding-top: 100px;
+  }
+
+  .text__reg{
+    font-size: 14pt;
   }
 
   .icon{
@@ -641,6 +605,14 @@ li .text__l{
     font-size: 10pt;
   }
 
+  p{
+    text-indent: 10px;
+  }
+
+  ul{
+    list-style: none;
+  }
+
   .header__logo img{
     left: 30%;
   }
@@ -648,12 +620,19 @@ li .text__l{
   .contact a{
     font-size:12pt ;
   }
+
+  .text__reg{
+    font-size: 12pt;
+  }
 }
 
 @media(max-width:620px){
   
   body{
     font-size: 9pt;
+  }
+  .header{
+    height: 70px;
   }
 
   .header__logo img{
@@ -663,6 +642,24 @@ li .text__l{
 
   .title{
     font-size: 27pt;
+    padding-top: 70px;
+  }
+
+  .text {
+    margin: 0 5px;
+  }
+
+   ul {
+    padding-left: 65px;
+   }
+
+  .text__l {
+    margin: 0;
+    margin-left: 30px;
+  }
+
+  .section img {
+    padding: 0 20px;
   }
 
   .contact a{
@@ -676,17 +673,40 @@ li .text__l{
     font-size: 8pt;
   }
 
+  p{
+    text-indent: 10px;
+  }
+
+  ul {
+    padding-left: 45px;
+   }
+
+   .text__l {
+    margin-left: 5px;
+  }
+
   .header__logo img{
     left: 30%;
     width: 170px;
   }
 
+  .text {
+    margin: 0 5px;
+  }
+
   .title{
     font-size: 25pt;
   }
-  .section img {
-    padding: 0 10px;
+
+  .text__reg{
+    font-size: 10pt;
+    padding-left: 15px;
   }
+
+  .section img {
+    padding: 0 15px;
+  }
+  
 }
 
 @media(max-width:430px){
@@ -694,4 +714,18 @@ li .text__l{
   body{
     font-size: 6pt;
   }
+
+  .header__logo img{
+    left: 28%;
+    width: 160px;
+  }
+
+  .text {
+    margin: 0 15px;
+  }
+
+  .section img {
+    padding: 0 20px;
+  }
+  
 }
