--- a/monte-i/style.css
+++ b/monte-i/style.css
@@ -23,7 +23,8 @@ footer, header, hgroup, menu, nav, section {
     display: block;
 }
 html {
-    height: 100%;
+  height: 100%;
+  scroll-behavior: smooth;
 }
 body {
     line-height: 1;
@@ -54,18 +55,32 @@ body{
   margin: 0 auto;
 }
 
+.titles{
+  width: 100%;
+  margin-bottom: 10px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #e1e1e1 #e1e1e1 #bfbfbf #bfbfbf;
+  background: #f1f1f1 url(data:image/gif;base64,R0lGODlhAQAaAIAAAPHx8fn5+SH5BAAAAAAALAAAAAABABoAAAIGjI8Iy70FADs=) repeat-x;
+}
+
+.title__item{
+  font-size: 16pt;
+  color: #333;
+}
+
 .container{
   max-width: 1200px;
   margin: 0 auto;
   overflow: hidden;
 }
 
-.header{
+.head{
   position: fixed;
   width: 100%; 
   align-items:baseline;
   height: 60px;
-  background-color: rgb(214, 214, 214);
+  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAA3CAIAAABCVLduAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAADlJREFUeNq8w7cNwDAQBDDtP+/naPgKNe5NgGd3z19n5rO7saowM++IQHe/zQxV9RYRZGYkovcjwABh2qKRbrB2/gAAAABJRU5ErkJggg==) repeat-x;
 }
 
 .header_inner{
@@ -86,7 +101,7 @@ body{
   display: flex;
 	justify-content: center;
   margin-right: 35px;
-  font-size: 14pt;
+  font-size: 12pt;
 }
 
 .navig li {
@@ -127,8 +142,7 @@ body{
 }
 
 .main div{
-  background-color: orange;
-  padding: 100px 10px;
+  <!--background-color: orange;
 }
 
 .main div:first-child{
@@ -179,13 +193,16 @@ body{
 .advertising-2{
   grid-area: advertising-2;
 }
-
+div .search{
+  background-color: #fff;
+}
 .search{
   display: table;
 }
 
 .search div{
   padding: 0;
+  background-color: #fff;
 }
 
 .search__input-cell{
@@ -193,14 +210,20 @@ body{
 }
 
 .search_input, .search_btn{
-  height: 25px;
+  height: 30px;
 }
 
 .search_input{
   width: 100%;
   border: solid 1px #ccc;
+  box-shadow: 0 1px 3px #eee inset;
   padding: 4px;
 }
+
+
+.search__input:focus{
+  background-color: lightblue;
+} 
 
 .search__btn-cell{
   width: 1%;
@@ -218,4 +241,19 @@ body{
 .search_btn:hover{
   background-color: #ccc;
 }
+/* News
+=================================*/
+.news__item{
+
+}
+
+/* Weather
+================================= */
+.weather{
+  
+}
+.weather__items{
+
+}
+
 
